tests/valid/aggregate/node_addressing_from_faq.esm
{
  "esm": "0.6.0",
  "metadata": {
    "name": "node_addressing_from_faq",
    "description": "M3 schema fixture (RFC semiring-faq-unified-ir §6.1; bead ess-my4.3.1): stable node identity + reference edges. An `aggregate` node carries the new optional `id` field (\"edge_enum\"), making it addressable; a `kind:\"derived\"` index set names that node via `from_faq`, and a downstream `aggregate` iterates the derived set via a `{ \"from\": ... }` range. This is the schema-valid form of the two inter-node reference edges the §6.1 cadence-partition pass requires — a derived index set -> its from_faq node, and a node -> the index set it references. Validates against the schema with no evaluator; the build-time reference-resolution pass (Julia/Rust/Python) turns these into real, queryable DAG edges.",
    "authors": [
      "EarthSciSerialization/polecats/gastown.rictus"
    ],
    "tags": [
      "aggregate",
      "node-addressing",
      "from_faq",
      "index-set",
      "conformance",
      "schema"
    ]
  },
  "models": {
    "NodeAddressingDemo": {
      "index_sets": {
        "faces": {
          "kind": "interval",
          "size": 8
        },
        "edges": {
          "kind": "derived",
          "from_faq": "edge_enum"
        }
      },
      "variables": {
        "u": {
          "type": "state"
        },
        "flux": {
          "type": "state"
        }
      },
      "equations": [
        {
          "lhs": {
            "op": "D",
            "args": ["u"],
            "wrt": "t"
          },
          "rhs": {
            "op": "aggregate",
            "id": "edge_enum",
            "args": [],
            "semiring": "bool_and_or",
            "output_idx": ["edge"],
            "expr": { "op": "index", "args": ["u", "f"] },
            "ranges": { "f": { "from": "faces" } }
          }
        },
        {
          "lhs": {
            "op": "D",
            "args": ["flux"],
            "wrt": "t"
          },
          "rhs": {
            "op": "aggregate",
            "args": [],
            "semiring": "sum_product",
            "output_idx": [],
            "expr": { "op": "index", "args": ["u", "e"] },
            "ranges": { "e": { "from": "edges" } }
          }
        }
      ]
    }
  }
}
